2004-05-11  Jackson Harper  <jackson2ximian.com>

	* runtime/net_1_1/Makefile.am:
	* runtime/net_2_0/Makefile.am: cscompmgd.dll is lowercase now.
	
2004-05-10  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (tmpinst-dir): Always add $tmpinst/lib to MONO_PATH.
	Fix quoting of commands.

2004-05-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* monowiz.win32.nsi: some changes i made to build the 0.91 win32 setup
	file.

2004-05-07  Bernie Solomon  <bernard@ugsolutions.com>

	* man/mono.1: mention MONO_EGD_SOCKET

2004-05-07  Raja R Harinath  <rharinath@novell.com>

	Goodbye 'fullbuild', hello 'bootstrap'.
	* Makefile.am (bootstrap): New target for building from CVS.  New
	improved version of 'fullbuild' -- does not install any files.
	(fullbuild): Obsolete target.  Bootstraps and installs tree.
	(mcs-tree-safe-build,xinstall-runtime,mcs-rest,remove-binaries):
	Removed.
	(stage1,stage1-mcs,stage1-mono,stage2,stage3)
	(tmpinst-dir,tmpinst-runtime): New targets used to implement a
	two-stage bootstrap.

2004-05-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: scandir check is no longer needed.

2004-05-05  Bernie Solomon  <bernard@ugsolutions.com>

	* configure.in: set LIBC on HPUX

2004-05-05  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Detect JNI headers in GNU classpath sources as well.

2004-05-05  Raja R Harinath  <rharinath@novell.com>

	* runtime/net_2_0/Makefile.am (install-data-local, uninstall-local): 
	Only disable this if INSTALL_2_0 is disabled.

2004-05-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* data/DefaultWsdlHelpGenerator.aspx: add any cookie in the request to
	the request we do for the actual web service.

2004-05-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: check for SIGEV_THREAD being defined before checking
	for AIO support. Fixes compilation under FreeBSD.

2004-05-04  Raja R Harinath  <rharinath@novell.com>

	* runtime/net_1_1/Makefile.am (mono_runtime): Use USE_JIT, not