@@ -1,4 +1,10 @@
-2004-05-11  Jackson Harper  <jackson2ximian.com>
+2004-05-14  Raja R Harinath  <rharinath@novell.com>
+
+	* Makefile.am: Revert unlogged unexplained changes.
+	(stage3): Make 'all-profiles' since the mono source tarball
+	carries all the net_2_0 preview dlls.
+
+2004-05-11  Jackson Harper  <jackson@ximian.com>
 
 	* runtime/net_1_1/Makefile.am:
 	* runtime/net_2_0/Makefile.am: cscompmgd.dll is lowercase now.
